2. Added options to not square frames and tab frames.
3. Animate faded progressbars when animation enabled.
4. Blend menubar and window titlebar gradients if:
        menubar, titlebar, and inactive titlebar gradients match AND
        not blending titlebar gradient AND
        using window titlebar colour for menubar AND
        extending window drag into menubar
5. When shading menubars only when active, or using window border colours as menubar
   colours, track the active window using a X11 event sent from the QtCurve kwin
   decoration.

1.3.0
-----
 1. Add option to use kwin titlebar colours as menubar shade.
 2. Add option to hide status bars via Ctrl-Alt-S
 3. Add option to drag windows by menubar.
 4. Better check/radio positioning.
 5. Fix background painting with some toolbars.
 6. Draw window frames square.
 7. Fix rounding of check/radio/splitter/expander highlight.
 8. Set toolbar frame width to 0 if not drawing borders.
 9. When toggling menubar, or statusbar, queue a redraw of the window.
10. Decrease size of SWT toolbars.
11. Disable background image and gradient for SWT apps.
12. Only allow QtCurve's colours to be overridden if they come from QtCurveRcStyle
    or GtkRcStyle. Also, in the case of root, disallow 'ToolTip' and 'default'
    styles - as if app is run via kdesu/kdesudo, these could potentially be the
    user's colours. This should stop other theme's / user's colours from interfering.
13. If using KDE4/Qt4 colour settings, only force the colours for buttons that are
    disabled. This fixes the coloured text on GWave's buttons.
14. Fix shading of menubars and when using flat menubar appearance and background
    image/gradient.
15. Fix slider groove not always being painted when using background gradient/rings.
16. Fix drawing glitches with unified comboentries on mouse over.
17. Improve firefox menubar text colouring.

1.2.0
-----
 1. Draw etch effect on radios if using a button effect, and not using button-like
    check/radios.